# aspire-cosmos-python-web

./: AppHost.cs  AspireCosmosPythonWeb.slnx  README.md  aspire-cosmos-python-web.csproj  aspire-cosmos-python-web.sln
.aspire/: settings.json
Properties/: launchSettings.json
src/AspireCosmosPythonWeb.ApiService/: AspireCosmosPythonWeb.ApiService.csproj  AspireCosmosPythonWeb.ApiService.http
src/AspireCosmosPythonWeb.ApiService/Properties/: launchSettings.json
src/AspireCosmosPythonWeb.AppHost/: AppHost.cs  AspireCosmosPythonWeb.AppHost.csproj
src/AspireCosmosPythonWeb.AppHost/Properties/: launchSettings.json
src/AspireCosmosPythonWeb.Web/: AspireCosmosPythonWeb.Web.csproj  Program.cs  WeatherApiClient.cs
src/AspireCosmosPythonWeb.Web/Components/: App.razor  _Imports.razor
src/AspireCosmosPythonWeb.Web/Components/Layout/: NavMenu.razor
src/AspireCosmosPythonWeb.Web/Properties/: launchSettings.json
src/PythonApp/: README.md  main.py  pyproject.toml
src/WebApp/: package.json  pnpm-lock.yaml
